--- a/Beacon/Blazor/Pages/SongLibrary.razor
+++ b/Beacon/Blazor/Pages/SongLibrary.razor
@@ -1,6 +1,38 @@
-﻿@page "/"
+﻿
+<div class="grid-cols-7 grid  h-full w-full">
 
-<h3>SongLibrary</h3>
+	<!-- LEFT SIDE -->
+	<div class="border-r-4 col-span-3 rounded-r-3xl border-l-sidepanel bg-l-container dark:border-d-sidepanel dark:bg-d-container">
+
+	</div>
+	
+	<!-- RIGHT SIDE -->
+	<div class="flex flex-col col-span-4 h-full w-full bg-l-background dark:bg-d-background">
+		
+		<div class="flex via-l-container/25 border-b-4 border-l-sidepanel to-l-container/0 h-32 w-full rounded-b-3xl bg-gradient-to-t from-l-container dark:border-d-sidepanel
+			dark:from-d-container dark:via-d-container/25 dark:to-d-container/0 px-10 items-center">
+
+			<div class="size-16 flex flex-none items-center justify-center rounded-xl bg-l-sidepanel dark:bg-d-sidepanel">
+				<span class="flex text-2xl text-center text-l-text-accent dark:text-d-text-accent ">F#</span>
+			</div>
+
+			<p class="flex-1 truncate mx-3">
+				<span class="text-3xl w-full text-l-text-accent dark:text-d-text-accent font-bold ">Amazing Grace Amazing Indeed</span><br />
+				<span class="text-lg text-l-text-accent dark:text-d-text-accent">John Newton</span>
+			</p>
+
+			<div class="flex flex-none">
+				<button class="bg-l-sidepanel px-6 rounded-lg h-10 text-xs text-l-text font-bold tracking-wider
+								dark:bg-d-sidepanel dark:text-d-text">
+					<span class="font-ark mr-2">E</span>EDIT
+				</button>
+			</div>
+
+		</div>
+
+	</div>
+
+</div>
 
 @code {
 
