--- a/Beacon/Blazor/_Imports.razor
+++ b/Beacon/Blazor/_Imports.razor
@@ -2,5 +2,8 @@
 @using Microsoft.AspNetCore.Components.Web
 
 @using Beacon
+@using Beacon.Model
+@using Beacon.Model.Enum
+@using Beacon.Blazor
 @using Beacon.Blazor.Pages
-@using Beacon.Blazor.Shared
+@using Beacon.Blazor.Components
