--- a/Beacon/Blazor/Components/SideBar.razor
+++ b/Beacon/Blazor/Components/SideBar.razor
@@ -1,7 +1,6 @@
 ﻿<div class="font-ark z-10 flex h-screen min-w-20
-flex-col items-center rounded-r-3xl bg-l-sidepanel
-py-5 text-l-text
-dark:text-d-text dark:bg-d-sidepanel">
+flex-col items-center rounded-r-3xl bg-sidepanel beacon-text
+py-5 ">
 	
 	<div class="flex-1 flex flex-col">
 		<button class="size-12 text-center text-lg @(ActivePage == BeaconPage.SongLibrary ? "text-l-primary dark:text-d-primary" : "")"
@@ -16,7 +15,7 @@ dark:text-d-text dark:bg-d-sidepanel">
 
 </div>
 
-<div class="z-0 absolute h-screen w-20 bg-l-container dark:bg-d-container">
+<div class="z-0 absolute h-screen w-20 bg-container">
 
 </div>
 
