--- a/Beacon/Blazor/_Imports.razor
+++ b/Beacon/Blazor/_Imports.razor
@@ -7,3 +7,6 @@
 @using Beacon.Blazor
 @using Beacon.Blazor.Pages
 @using Beacon.Blazor.Components
+@using Beacon.Blazor.Components.Controls
+
+@using Majorsoft.Blazor.Components.Debounce
