--- a/Beacon/Blazor/_Imports.razor
+++ b/Beacon/Blazor/_Imports.razor
@@ -1,9 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Web.Virtualization
 
 @using Beacon
 @using Beacon.Model
 @using Beacon.Model.Enum
+@using Beacon.Model.Songs
 @using Beacon.Blazor
 @using Beacon.Blazor.Pages
 @using Beacon.Blazor.Components
