--- a/Beacon/Blazor/_Imports.razor
+++ b/Beacon/Blazor/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.JSInterop
 
 @using Beacon
 @using Beacon.Model
@@ -9,6 +10,7 @@
 @using Beacon.Blazor
 @using Beacon.Blazor.Pages
 @using Beacon.Blazor.Components
+@using Beacon.Blazor.Components.Songs
 @using Beacon.Blazor.Components.Controls
 
 @using Majorsoft.Blazor.Components.Debounce
