--- a/Beacon/Blazor/Components/Controls/BeaconButton.razor
+++ b/Beacon/Blazor/Components/Controls/BeaconButton.razor
@@ -1,14 +1,20 @@
 ﻿<button @onclick="() => OnClick.InvokeAsync()"
 		class="bg-sidepanel space-x-3 text-xs flex items-center justify-center px-5 h-10 rounded-[6px]
 			   hover:bg-primary hover:text-d-text-accent">
-
-	<span class="font-ark">
-		@Icon
-	</span>
-
-	<span class="font-bold tracking-widest capitalize">
-		@Message
-	</span>
+	
+	@if(!String.IsNullOrEmpty(Icon))
+	{
+		<span class="font-ark">
+			@Icon
+		</span>
+	}
+	
+	@if(!String.IsNullOrEmpty(Message))
+	{
+		<span class="font-bold capitalize tracking-widest">
+			@Message
+		</span>
+	}
 
 </button>
 
