--- a/Beacon/Blazor/Components/Controls/BeaconInput.razor
+++ b/Beacon/Blazor/Components/Controls/BeaconInput.razor
@@ -1,5 +1,5 @@
 ﻿
-<DebounceInput class="h-16 w-full px-3 beacon-background beacon-text-color-accented text-sm rounded-xl border-0 focus:ring-1" 
+<DebounceInput class="beacon-background beacon-text-color-accented border-0 h-16 w-full rounded-xl px-3 text-sm focus:ring-1" 
 			placeholder="@Placeholder" DebounceTime="DebounceTime"/>
 			
 
