--- a/Beacon/Blazor/Pages/SongLibrary.razor
+++ b/Beacon/Blazor/Pages/SongLibrary.razor
@@ -1,47 +1,23 @@
 ﻿@using System.Diagnostics
 @inject ISongService SongService
 
-<div class="grid-cols-12 grid h-full w-full ">
+<div class="grid-cols-12 grid h-full w-full">
 
 	<!--===== LEFT SIDE ======-->
-	<div class="flex flex-col border-r-2 col-span-6 space-y-3 rounded-r-3xl border-sidepanel bg-container p-10 h-full overflow-hidden">
+	<div class="border-r-2 col-span-6 border-sidepanel bg-container flex h-full flex-col space-y-3 overflow-hidden rounded-r-3xl p-10">
 
 
 		<!--[ SEARCH INPUT ]-->
-		<div class="flex flex-col w-full space-y-2">
-			@* <p class="flex space-x-3">
-				<span class="tracking-widest text-xs beacon-text opacity-50 font-bold italic">SEARCH MODE:</span>
-				<span class="tracking-widest text-xs beacon-text font-bold">TITLE</span>
-				<span class="tracking-widest text-xs beacon-text opacity-50 font-bold">LYRIC</span>
-				<span class="tracking-widest text-xs beacon-text opacity-50 font-bold">AUTHOR</span>
-				<span class="tracking-widest text-xs beacon-text opacity-50 font-bold">TAG</span>
-			</p>*@
-			<DebounceInput class="h-16 px-3 bg-default text-accented text-sm rounded-xl border-0 focus:ring-1" 
+		<div class="flex w-full flex-col space-y-2">
+			<BeaconSearchMode ActiveSearchMode="currentSearchMode" SearchModeChanged="switchSearchMode"></BeaconSearchMode>
+			<DebounceInput class="bg-default text-accented border-0 h-16 rounded-xl px-3 text-sm focus:ring-1" 
 							placeholder="Search"
 							DebounceTime="100" ></DebounceInput>
 		</div>
 
 
 		<!--[ SONG LIST ]-->
-		<div class="w-full overflow-auto h-full">
-			<Virtualize Items="songs" Context="Song" ItemSize="64">
-				<div class="flex h-16 items-center group cursor-pointer rounded-xl px-3 hover:text-accented-on-primary hover:bg-primary">
-					
-					<div class="flex-1 text-sm">
-						<span class="text-sm">@Song.Title</span> 
-						@if(!String.IsNullOrEmpty(Song.Author)){
-						<br/><span class="text-xs opacity-50">@Song.Author</span> 
-						}
-					</div>
-
-					<div class="@(isQueueMode ? "" : "hidden group-hover:flex space-x-5")">
-						<span class="font-ark">A</span>
-						<span class="font-ark">D</span>
-					</div>
-
-				</div>
-			</Virtualize>
-		</div>
+		<SongList Songs="songs" SelectedSong="selectedSong" IsQueueMode="isQueueMode" SelectedSongChanged="SelectedSongChanged"></SongList>
 
 		<!--[ QUEUE AND ADD SONG ]-->
 		<div class="flex justify-between">
@@ -50,25 +26,25 @@
 		</div>
 
 	</div>
-
+		
 
 	<!--===== RIGHT SIDE ======-->
-	<div class="flex flex-col col-span-6 h-full w-full bg-default">
+	<div class="col-span-6 bg-default flex h-full w-full flex-col">
 
 		<!--------[ TOP ]-------->
-		<div class="flex via-l-container/25 border-b-2 border-sidepanel to-l-container/0 h-32 w-full rounded-b-3xl bg-gradient-to-t from-l-container
-			dark:from-d-container dark:via-d-container/25 dark:to-d-container/0 px-10 items-center">
+		<div class="via-l-container/25 border-b-2 border-sidepanel to-l-container/0 flex h-32 w-full items-center rounded-b-3xl
+bg-gradient-to-t from-l-container px-10 dark:from-d-container dark:via-d-container/25 dark:to-d-container/0">
 
 			<!--[ KEY ]-->
-			<div class="size-16 flex flex-none items-center justify-center rounded-xl bg-sidepanel">
-				<span class="flex text-2xl text-center text-l-text-accent dark:text-d-text-accent ">F#</span>
+			<div class="bg-sidepanel flex size-16 flex-none items-center justify-center rounded-xl">
+				<span class="text-l-text-accent flex text-center text-2xl dark:text-d-text-accent">F#</span>
 			</div>
 
 
 			<!--[ TITLE AND AUTHOR ]-->
-			<p class="flex-1 truncate mx-3">
-				<span class="text-3xl w-full text-accented font-bold ">Amazing Grace Amazing Indeed</span><br />
-				<span class="text-lg text-accented">John Newton</span>
+			<p class="flex-1 mx-3 truncate">
+				<span class="text-accented w-full text-3xl font-bold">@selectedSong.Title</span><br />
+				<span class="text-accented text-lg">@selectedSong.Author</span>
 			</p>
 
 
@@ -83,7 +59,35 @@
 		<!--------[ BOTTOM ]-------->
 
 		<!--[ LANGUAGE ]-->
+		<div class="px-10 pt-10">
+			<SongLanguageList SelectedSong="selectedSong" Songs="languagesOfSelectedSong" SelectedSongChanged="SelectedSongChanged"></SongLanguageList>
+		</div>
+
 		<!--[ LYRICS ]-->
+		<div class="flex flex-col px-10 space-y-3">
+
+			<div class="border-y-2 border-sidepanel to-l-container/0 w-full items-center rounded-3xl relative
+py-3 text-center text-sm bg-container hover:bg-primary hover:text-accented-on-primary cursor-pointer whitespace-pre">
+				<div class="absolute top-4 left-7">1</div>
+Amazing grace,
+How sweet the sound,
+That saved a wretch like me!
+I once was lost,
+but now I'm found,
+Was blind, but now I see.
+			</div>
+
+			<div class="border-y-2 border-sidepanel to-l-container/0 w-full items-center rounded-3xl
+py-3 text-center text-sm bg-container hover:bg-primary hover:text-accented-on-primary cursor-pointer whitespace-pre">
+Amazing grace,
+How sweet the sound,
+That saved a wretch like me!
+I once was lost,
+but now I'm found,
+Was blind, but now I see.
+			</div>
+		</div>
+
 
 	</div> 
 
@@ -91,11 +95,22 @@
 
 @code {
 	private List<Song> songs = new List<Song>();
+	private List<Song> languagesOfSelectedSong = new List<Song>();
+	private Song selectedSong = new Song();
 
+	private SearchMode currentSearchMode;
 	private bool isQueueMode = false;
 
 	protected override async Task OnInitializedAsync()
 	{
 		songs = await SongService.GetAllAsync();
+	}
+
+	private void switchSearchMode(SearchMode searchMode) => currentSearchMode = searchMode; 
+
+	private async Task SelectedSongChanged(Song song)
+	{
+		selectedSong = await SongService.GetAsync(song.Id);
+		languagesOfSelectedSong = await SongService.GetLanguagesAsync(selectedSong.Number);
 	}
 }
