--- a/Beacon/wwwroot/css/input.css
+++ b/Beacon/wwwroot/css/input.css
@@ -95,13 +95,13 @@
 
 /* Track */
 ::-webkit-scrollbar-track:horizontal {
-    @apply bg-l-sidepanel dark:bg-d-sidepanel;
+    @apply bg-l-background dark:bg-d-background;
     border-radius: 12px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb:horizontal {
-    @apply bg-l-background dark:bg-d-background;
+    @apply bg-l-sidepanel dark:bg-d-sidepanel;
     border-radius: 12px;
 }
 
@@ -112,8 +112,7 @@
 }
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    @apply bg-l-primary dark:bg-d-primary cursor-pointer
-}
+    @apply cursor-pointer bg-l-primary dark:bg-d-primary}
 
 input[type=file] {
     opacity: 0;
@@ -134,7 +133,7 @@ a, .btn-link {
     padding-top: 1.1rem;
 }
 
-h1:focus {
+:focus {
     outline: none;
 }
 
